Make sure tokens label on dungeon counter is not wrapped on galaxy s6

--- a/src/app/character-sheet/custom-counter/counter.component.scss
+++ b/src/app/character-sheet/custom-counter/counter.component.scss
@@ -1,6 +1,6 @@
 .counter-label {
   text-align: center;
-  width: 50px;
+  width: 55px;
 }
 
 .counter-container {
